...
        horizontalAlignment = Alignment.CenterHorizontally,
        modifier = Modifier.fillMaxWidth()
    ) {
        Spacer(Modifier.height(70.dp))
        NoInstagramCanvas()
        Spacer(Modifier.height(50.dp))
        FacebookButton(text = "Sign in with Facebook",
            isFacebookLoading = isFacebookLoading,
            icon = painterResource(id = R.drawable.ic_facebook_logo),
            onFacebookBtnClick = {
                isFacebookLoading = true
                facebookLoginButton.performClick()
            })
        Spacer(Modifier.height(30.dp))
        GoogleButton(
            navController,
            text = "Sign in with Google",
            loadingText = "Signing in...",
            isLoading = isLoading,
            icon = painterResource(id = R.drawable.ic_google_logo)
        )
        Spacer(Modifier.height(30.dp))
        LoginWithEmailButton(navController)
...
