...
                        focusedBorderColor = Color.White,
                        unfocusedBorderColor = Color.White
                    ),
                    shape = RoundedCornerShape(24.dp),
                    label = {
                        Text(
                            text = "Name",
                            color = Color.White,
                            modifier = Modifier.padding(start = 20.dp)
                        )
                    },
                    onValueChange = {
                        userName = it
...
                    },
                    shape = RoundedCornerShape(24.dp),
                    modifier = Modifier
                        .width(300.dp)
                        .alpha(0.4f),
                    content = {
                        Text(text = "Register")
                    },
                    colors = ButtonDefaults.buttonColors(backgroundColor = Color.White)
                )

                Text(
                    text = "Already have an account?",
...
